quick menu in progress

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,101 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dobromir: Ent's destiny</title>
+    <!-- <link rel="stylesheet" href="icons.css" /> -->
   </head>
   <body>
     <canvas class="webgl"></canvas>
+    <div class="quickMenu">
+      <div class="circleMenu">
+        <span class="igni" data-color="#cd4762">
+          <button>
+            <svg
+              width="48"
+              height="42"
+              viewBox="0 0 48 42"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M47.3861 37.359L30.6993 8.74644L27.2391 14.6794L39.5694 35.8646H8.18389L27.2394 2.82043L26.4919 1.48294H26.4924C25.9566 0.565007 24.9734 0 23.9106 0C22.8472 0 21.8641 0.565047 21.3282 1.48294L0.404538 37.3521H0.40506C-0.129228 38.2711 -0.135486 39.4048 0.389422 40.3294C0.913808 41.2536 1.89011 41.8301 2.95297 41.8432H44.8003C45.8673 41.8422 46.8536 41.2719 47.3868 40.3472C47.9195 39.4225 47.9195 38.284 47.3858 37.3593L47.3861 37.359Z"
+              />
+            </svg>
+            <!-- Igni -->
+          </button>
+        </span>
+        <span class="axii">
+          <button>
+            <svg
+              width="48"
+              height="42"
+              viewBox="0 0 48 42"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M47.426 1.49444C47.1633 1.03938 46.7854 0.661993 46.3303 0.399286C45.8748 0.1371 45.3587 -0.000518952 44.8333 1.47056e-06H2.98592C1.9189 0.00104392 0.932648 0.571293 0.399415 1.49602C-0.133312 2.42073 -0.133312 3.55916 0.400457 4.48391L21.3241 40.3531C21.8595 41.271 22.8426 41.8355 23.906 41.8355C24.9688 41.8355 25.9519 41.271 26.4878 40.3531L36.0904 23.913H29.1405L23.9097 32.9256L8.21694 5.97833H39.6025L36.1127 11.9567H23.9096V17.935H39.6023L47.4185 4.48405C47.6823 4.03004 47.8215 3.51503 47.8225 2.9907C47.8241 2.46579 47.6875 1.94975 47.4258 1.49468L47.426 1.49444Z"
+              />
+            </svg>
+            <!-- Axii -->
+          </button>
+        </span>
+        <span class="quen">
+          <button>
+            <svg
+              width="48"
+              height="42"
+              viewBox="0 0 48 42"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M36.1423 11.9565L23.9095 32.9256L8.21671 5.97833H46.5519L47.4187 4.48391C47.9525 3.5592 47.9525 2.42077 47.4198 1.49602C46.8865 0.571305 45.9003 0.00106753 44.8333 0H2.98592C1.9189 0.00104245 0.932648 0.571292 0.399414 1.49602C-0.133312 2.42073 -0.133312 3.55916 0.400457 4.48391L21.3241 40.3531C21.8595 41.271 22.8426 41.8355 23.906 41.8355C24.9688 41.8355 25.9519 41.2709 26.4878 40.3531L43.0626 11.9567L36.1423 11.9565Z"
+              />
+            </svg>
+
+            <!-- Quen -->
+          </button>
+        </span>
+        <span class="yrden">
+          <button>
+            <svg
+              width="36"
+              height="45"
+              viewBox="0 0 36 45"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M27.9455 38.8583H7.97858L13.5607 32.2524L9.65234 27.6492L1.00678 37.8496C0.482918 38.4673 0.147231 39.2221 0.0388098 40.0243C-0.0696117 40.8266 0.0534059 41.6434 0.393792 42.3778C0.734696 43.1133 1.27888 43.7352 1.96227 44.171C2.64565 44.6068 3.43947 44.8377 4.24959 44.8367H31.6745C32.4846 44.8377 33.2785 44.6068 33.9619 44.171C34.6452 43.7352 35.1894 43.1134 35.5303 42.3778C35.8707 41.6434 35.9937 40.8266 35.8853 40.0243C35.7769 39.2221 35.4412 38.4673 34.9174 37.8496L7.97813 5.97837H27.945L22.3629 12.5843L26.2713 17.1875L34.9168 6.98706C35.4407 6.36937 35.7764 5.61461 35.8848 4.81236C35.9932 4.0101 35.8702 3.1933 35.5298 2.45884C35.1889 1.72335 34.6447 1.10147 33.9613 0.665651C33.278 0.22983 32.4841 -0.00103733 31.674 3.51387e-06H4.24906C3.43903 -0.00103893 2.64509 0.229883 1.96173 0.665651C1.27838 1.10142 0.734175 1.72328 0.393258 2.45884C0.0528751 3.19329 -0.0701451 4.0101 0.0382763 4.81236C0.146698 5.61461 0.482385 6.36935 1.00625 6.98706L27.9455 38.8583Z"
+              />
+            </svg>
+
+            <!-- Yrden -->
+          </button>
+        </span>
+        <span class="aard">
+          <button>
+            <svg
+              width="48"
+              height="42"
+              viewBox="0 0 48 42"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M47.4187 37.3516L26.495 1.4824C25.9597 0.564471 24.9766 0 23.9132 0C22.8503 0 21.8672 0.564525 21.3313 1.4824L11.7287 17.9224H18.6786L23.9094 8.91044L39.6022 35.8563H8.21667L11.7064 29.878H23.9096V23.8997H9.95822C8.89121 23.9007 7.90602 24.4705 7.37225 25.3946L0.400456 37.3508C-0.133311 38.2755 -0.133311 39.4139 0.399413 40.3387C0.93266 41.2634 1.91891 41.8336 2.98591 41.8347H44.8333C45.9003 41.8336 46.8865 41.2634 47.4198 40.3387C47.9525 39.4139 47.9525 38.2755 47.4187 37.3508L47.4187 37.3516Z"
+              />
+            </svg>
+            <!-- Aard -->
+          </button>
+        </span>
+      </div>
+      <!-- <div class='quickFunctions'>
+
+      </div>
+      <div class="copyRights">
+
+      </div> -->
+    </div>
   </body>
 </html>
